# edgarpull

./: INTEGRATIONS.md  INTEROP.md  NOTICE  README.md  pyproject.toml
demos/01-basic/: SCENARIO.md
docs/: ARCHITECTURE.md
edgarpull/: __init__.py  __main__.py  cli.py  connect.py  core.py  mcp_server.py  sample_cache.json
examples/: help.txt  version.txt
tests/: test_connect.py  test_deep.py  test_fulltext.py  test_smoke.py
