[build-system]
requires = ["hatchling"]
build-backend = "hatchling.build"

[project]
name = "cognis-edgarpull"
version = "0.1.1"
description = "SEC EDGAR intelligence — 13F institutional holdings, Form 4 insider trades, 8-K material events by ticker/CIK"
authors = [{name = "Cognis Digital", email = "suite@cognis.digital"}]
license = {text = "LicenseRef-COCL-1.0"}
requires-python = ">=3.10"
readme = "README.md"
keywords = ["fintech", "sec", "edgar", "13f", "form-4", "8-k", "cognis-digital", "cognis-neural-suite"]
classifiers = [
    "Development Status :: 4 - Beta",
    "License :: Other/Proprietary License",
    "Programming Language :: Python :: 3.10",
    "Programming Language :: Python :: 3.11",
    "Programming Language :: Python :: 3.12",
    "Topic :: Office/Business :: Financial :: Investment",
]
dependencies = []

[project.optional-dependencies]
connect = ["cognis-connect @ git+https://github.com/cognis-digital/cognis-connect.git"]
dev = ["pytest>=8.0"]

[project.urls]
Homepage = "https://cognis.digital"
Repository = "https://github.com/cognis-digital/edgarpull"

[project.scripts]
"edgarpull-emit" = "edgarpull.connect:emit_main"
edgarpull = "edgarpull.cli:main"

[tool.hatch.build.targets.wheel]
packages = ["edgarpull"]
